tests/fixtures/invalid/ngl007_invalid.py
from nicegui import ui

with ui.dialog():
    ui.label('Delete this record?')
    ui.button('Delete')
